crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__date__single__specifier_25.snap
---
source: crates/tools/cron/src/tests/unit/date.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Invalid(
                    "",
                    '-',
                ),
                Nom(
                    "25",
                    Alt,
                ),
            ],
        },
    ),
)
